--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <option value="cash Basis Gas Payments">Cash Basis GAS Payments</option>
         <option value="accrued Interest Expense">Accrued Interest Expense</option>
     </select>
-</div>
+    </div>
+    <div class="col">
+    <a href="static.svg">Static Version</a></div>
 
 </div>
     <div class="d-flex justify-content-center">
@@ -45,6 +47,7 @@
     <p>*All numbers are in dollar amounts</p>
 
     <footer >
+
     <p class="footer">
         Accrual Basis GAS Expense: Incurring Government Account Series (GAS) interests regardless of when paid</p>
         <p class="footer">Savings Bonds: Securities issued by the government to fund for public expenditures</p>
@@ -52,6 +55,7 @@
     <p class="footer">Cash Basis GAS Payments: Interest payments on Government Account Series (GAS) when they are actually paid</p>
      <p class="footer">Accrued Interest Expense: the interest that has been incurred but not yet paid on the national debt
     </p>
+    <p class="footer">source: <a href="https://fiscaldata.treasury.gov/datasets/interest-expense-debt-outstanding/interest-expense-on-the-public-debt-outstanding">US Treasury</a></p>
 </footer>
 </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
